--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 <div class="dropdown-content">
                     <a href="../pages/cours_1_1.html"><span class="maths">·</span> Équations différentielles</a>
                     <a href="./pages/cours_1_2.html"><span class="maths">·</span> Probabilités</a>
-                    <a href="./pages/cours_1_3.html"><span class="maths">·</span> Suites et séries de fonctions</a>
-                    <a href="./pages/cours_1_2.html"><span class="phys">·</span> Mécanique des fluides</a>
+                    <a href="./pages/1_ssf.html"><span class="maths">·</span> Suites et séries de fonctions</a>
+                    <a href="./pages/1_meca_fluide.html"><span class="phys">·</span> Mécanique des fluides</a>
                     <a href="./pages/cours_1_2.html"><span class="phys">·</span> Mécanique quantique</a>
                     <a href="./pages/cours_1_2.html"><span class="phys">·</span> Thermodynamique 2</a>
                     <a href="./pages/cours_1_2.html"><span class="phys">·</span> Vibrations aux ondes</a>
