--- a/pages/1_meca_fluide.html
+++ b/pages/1_meca_fluide.html
@@ -72,7 +72,7 @@
                     Semestre 4
                 </button>
                 <div class="dropdown-content">
-                    <a href="../cours_1_1.html"><span class="maths">·</span> Équations différentielles</a>
+                    <a href="./cours_1_1.html"><span class="maths">·</span> Équations différentielles</a>
                     <a href="./cours_1_2.html"><span class="maths">·</span> Probabilités</a>
                     <a href="./1_ssf.html"><span class="maths">·</span> Suites et séries de fonctions</a>
                     <a href="./1_meca_fluide.html"><span class="phys">·</span> Mécanique des fluides</a>
@@ -106,72 +106,42 @@
     </header>
     <div id="container">
         <div class="title_math title">
-            <h1>Algèbre linéaire 2</h1>
+            <h1>Mécanique des fluides</h1>
         </div>
         <div class="body2">
             <div class="content">
                 <div>
                     <h3 class="chapter_title">
-                        Chapitre 1 - Déterminant
+                        Cours + TD
                     </h3>
                 </div>
                 <div class="chapter" style="display: flex; justify-content: space-evenly;">
-                    <!--  -->
                     <div>
                         <h4>Cours</h4>
-                        <a href="../cours/2_algebre_lineaire_1.pdf" download="2_algebre_lineaire_1" style="text-decoration: none;">
+                        <a href="../cours/1_electronique_numerique_1.pdf" download="1_electronique_numerique_1" style="text-decoration: none;">
                             <button class="button" type="button">
                                 <span class="button__text">Télécharger</span>
                                 <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35" id="bdd05811-e15d-428c-bb53-8661459f9307" data-name="Layer 2" class="svg"><path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path><path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path><path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path></svg></span>
                               </button>
                         </a>
-                        <a href="../cours/2_algebre_lineaire_1.pdf" class="see_in_browser" target="_blank" style="text-decoration: none;">
+                        <a href="../cours/1_electronique_numerique_1.pdf" class="see_in_browser" target="_blank" style="text-decoration: none;">
                             Ouvrir
                         </a>
                     </div>
-                    <!--  -->
+                    <div>
+                        <h4>TD</h4>
+                        <a href="../td/1_meca_fluide_t1.pdf" download="1_meca_fluide_t1" style="text-decoration: none;">
+                            <button class="button" type="button">
+                                <span class="button__text">Télécharger</span>
+                                <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35" id="bdd05811-e15d-428c-bb53-8661459f9307" data-name="Layer 2" class="svg"><path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path><path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path><path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path></svg></span>
+                            </button>
+                        </a>
+                        <a href="../td/1_meca_fluide_t1.pdf" class="see_in_browser" target="_blank" style="text-decoration: none;">
+                            Ouvrir
+                        </a>
+                    </div>
                 </div>
             </div>
-            <div class="line"></div>
-            <div class="content">
-                <div>
-                    <h3 class="chapter_title">
-                        Chapitre 2 - Réduction des endomorphismes et des matrices carrées
-                    </h3>
-                </div>
-                <div class="chapter">
-                    <a href="../cours/2_algebre_lineaire_2.pdf" download="2_algebre_lineaire_2" style="text-decoration: none;">
-                        <button class="button" type="button">
-                            <span class="button__text">Télécharger</span>
-                            <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35" id="bdd05811-e15d-428c-bb53-8661459f9307" data-name="Layer 2" class="svg"><path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path><path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path><path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path></svg></span>
-                          </button>
-                    </a>
-                    <a href="../cours/2_algebre_lineaire_2.pdf" class="see_in_browser" target="_blank" style="text-decoration: none;">
-                        Ouvrir
-                    </a>
-                </div>
-            </div>
-            <div class="line"></div>
-            <div class="content">
-                <div>
-                    <h3 class="chapter_title">
-                        Chapitre 3 - Espaces euclidiens
-                    </h3>
-                </div>
-                <div class="chapter">
-                    <a href="../cours/2_algebre_lineaire_3.pdf" download="2_algebre_lineaire_3" style="text-decoration: none;">
-                        <button class="button" type="button">
-                            <span class="button__text">Télécharger</span>
-                            <span class="button__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35 35" id="bdd05811-e15d-428c-bb53-8661459f9307" data-name="Layer 2" class="svg"><path d="M17.5,22.131a1.249,1.249,0,0,1-1.25-1.25V2.187a1.25,1.25,0,0,1,2.5,0V20.881A1.25,1.25,0,0,1,17.5,22.131Z"></path><path d="M17.5,22.693a3.189,3.189,0,0,1-2.262-.936L8.487,15.006a1.249,1.249,0,0,1,1.767-1.767l6.751,6.751a.7.7,0,0,0,.99,0l6.751-6.751a1.25,1.25,0,0,1,1.768,1.767l-6.752,6.751A3.191,3.191,0,0,1,17.5,22.693Z"></path><path d="M31.436,34.063H3.564A3.318,3.318,0,0,1,.25,30.749V22.011a1.25,1.25,0,0,1,2.5,0v8.738a.815.815,0,0,0,.814.814H31.436a.815.815,0,0,0,.814-.814V22.011a1.25,1.25,0,1,1,2.5,0v8.738A3.318,3.318,0,0,1,31.436,34.063Z"></path></svg></span>
-                          </button>
-                    </a>
-                    <a href="../cours/2_algebre_lineaire_3.pdf" class="see_in_browser" target="_blank" style="text-decoration: none;">
-                        Ouvrir
-                    </a>
-                </div>
-            </div>
-        </div>
-        
     </div>
 </body>
 </html>
